# trading_network

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
chain/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  views.py
chain/migrations/: 0001_initial.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
trading_network/: asgi.py  settings.py  urls.py  wsgi.py
